  * 2009-03-20 fimex-0.13
    * allowing for auto-tuning axes in interpolation (SpatialAxisSpec)
    * removal of variables/attributes in cdmWriterConfig
    * fixing broken projection-interpolation (broken since 0.12)
  * 2009-03-02 fimex-0.12
    * adding coordinate interpolation (kdtree and brute force)
    * fixing bugs in lat-lon interpolation
    * enabling interpolation of ghrsst satellite data files
    * easier build without felt-library
    * using optional OpenMP for time-critical routines
  * 2009-01-23 fimex-0.11
    * adding bicubic spatial interpolation
    * enabling netcdf-4 output with hdf5-zlib compression
  * 2009-01-13 fimex-0.10
    * adding time-interpolation
    * adding documentation
    * fix for erroneous felt projections
  * 2008-09-23 fimex-0.9
    * adding grib-writer (v1 and v2) via [[http://www.ecmwf.int/publications/manuals/grib_api/index.html|grib_api]]
    * improved logging
    * switching to svn
    * adding proj4 to automake
  * 2008-06-20 fimex-0.8
    * moving headers to fimex/*.h
    * throw exception when renaming non-existing field in NetCDF-writer (instead of segfault)
    * allowing additional parameters to MIN_DATETIME()/MAX_DATETIME in attributes for felt2nc_variables
    * reading sigma_hybrid parameters directly from felt_file
    * changing global attributes for damocles
    * fixing a bug in vector-interpolation (errors during calculation of v-vector)
    * improving speed of vector-interpolation
  * 2008-06-12 fimex-0.7
    * fixing coordinates of polar-stereographic felt-files
  * 2008-06-11 fimex-0.6
    * units-support for netcdf output configuration
    * keeping input-order of variables/attributes/dimensions within fimex 
  * 2008-06-05 fimex-0.5
    * bugfix for short-fields when converting from felt
    * netcdf output configuration
  * 2008-05-21 fimex-0.4
    * performance improvements of interpolation (>90% with SIMD)
    * adjusting output to damocles
    * fixing order of long, lat projection axes